--- a/mocks/courriels/2023-07-12 00-21-09-testeur@stampee.com.html
+++ b/mocks/courriels/2023-07-12 00-21-09-testeur@stampee.com.html
@@ -15,17 +15,17 @@
 
     <section>
 	<p style="line-height: 1.5; opacity: 0.9;">Bonjour
-		test
-		test,</p>
+		Bob
+		Testeur,</p>
 
 	
 			<p style="line-height: 1.5; opacity: 0.9;">Nous avons le plaisir de vous transmettre votre identifiant de connexion et votre mot de passe sur notre site Stampee.</p>
 	
 	<p style="line-height: 1.5; opacity: 0.9;">Identifiant:
-		<strong style="color: #f9bc64;">test@test.ca</strong>
+		<strong style="color: #f9bc64;">testeur@stampee.com</strong>
 	</p>
 	<p style="line-height: 1.5; opacity: 0.9;">Mot de passe:
-		<strong style="color: #f9bc64;">i8s9u1c1g7</strong>
+		<strong style="color: #f9bc64;">p4s4y4s8n7</strong>
 	</p>
 
 	<p style="line-height: 1.5; opacity: 0.9;">
